fix fancy link appearance on small devices (remove hover effect)

--- a/src/_includes/sass/styles.scss
+++ b/src/_includes/sass/styles.scss
@@ -131,7 +131,7 @@ body {
 				margin-left: 180px;
 			}
 
-			h3 {
+			h4 {
 				margin-top: 0px;
 				margin-bottom: 10px;
 			}
@@ -177,23 +177,23 @@ body {
 }
 
 .zap-link-border {
+	display: block;
+	position: absolute;
+	top: -3px; right: -3px; bottom: -3px; left: -3px;
 	border: 3px solid white;
-
-	@include bp(m) {
-		display: block;
-		position: absolute;
-		top: -3px; right: -3px; bottom: -3px; left: -3px;
-		border: 3px solid white;
-		@include clippath(polygon(0% 0%, 0% 100%, 76% 100%, 25% 25%, 75% 25%, 75% 75%, 58% 75%, 76% 100%, 100% 100%, 100% 0%));	
-	}
+	@include clippath(polygon(0% 0%, 0% 100%, 76% 100%, 25% 25%, 75% 25%, 75% 75%, 58% 75%, 76% 100%, 100% 100%, 100% 0%));	
 }
 
 .zap-link-in {
-	@include animation(zap-link-anim 0.5s 0.1s forwards);
+	@include bp(m) {
+		@include animation(zap-link-anim 0.5s 0.1s forwards);
+	}
 }
 
 .zap-link-out {
-	@include animation(zap-link-anim-out 0.5s 0s forwards);
+	@include bp(m) {
+		@include animation(zap-link-anim-out 0.5s 0s forwards);
+	}
 }
 
 @keyframes zap-link-anim {
